--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "react-native-get-random-values": "^1.11.0",
     "react-native-google-places-autocomplete": "^2.5.7",
     "react-native-maps": "1.14.0",
-    "react-native-maps-directions": "^1.9.0"
+    "react-native-maps-directions": "^1.9.0",
+    "react-native-svg": "^15.2.0",
+    "react-native-svg-transformer": "^1.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
